feat: edit some images

--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -65,7 +65,7 @@
             <div class="highlights-grid">
                 <article class="card">
                     <div class="card-image">
-                        <img src="./assets/images/bg.png"
+                        <img src="./assets/images/feedcrumbs.jpg"
                             alt="Community members sharing food stories and recipes on FeedCrumbs timeline">
                     </div>
                     <div class="card-content">
@@ -81,7 +81,7 @@
 
                 <article class="card">
                     <div class="card-image">
-                        <img src="./assets/images/bg.png"
+                        <img src="./assets/images/recipe.jpg"
                             alt="Exciting cooking competition showcasing traditional cultural dishes">
                     </div>
                     <div class="card-content">
@@ -97,7 +97,7 @@
 
                 <article class="card">
                     <div class="card-image">
-                        <img src="./assets/images/bg.png"
+                        <img src="./assets/images/map.jpg"
                             alt="Interactive map showing cultural food locations across Australia">
                     </div>
                     <div class="card-content">
@@ -124,7 +124,7 @@
             <div class="about-content">
                 <article class="about-item">
                     <div class="about-image">
-                        <img src="./assets/images/bg.png"
+                        <img src="./assets/images/cci.jpg"
                             alt="Families gathering around traditional dishes celebrating their cultural heritage">
                     </div>
                     <div class="about-text">
@@ -142,7 +142,7 @@
 
                 <article class="about-item about-item-reverse">
                     <div class="about-image">
-                        <img src="./assets/images/bg.png"
+                        <img src="./assets/images/vision.png"
                             alt="Diverse community members connecting through shared appreciation of cultural cuisine">
                     </div>
                     <div class="about-text">
