--- a/work_phase_4/about.html
+++ b/work_phase_4/about.html
@@ -284,21 +284,15 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="feed_crumbs.html">FeedCrumbs</a></li>
                                 <li><a href="crumbings.html">Crumbings</a></li>
+                                <li><a href="crumbs_map.html">CrumbsMap</a></li>
+                                <li><a href="community.html">OZvent</a></li>
                             </ul>
                         </div>
                         <div class="footer-links">
-                            <h4 class="footer-heading">Support</h4>
+                            <h4 class="footer-heading">Assignment Specific</h4>
                             <ul>
-                                <li><a href="help.html">Help Center</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="guidelines.html">Community Guidelines</a></li>
-                            </ul>
-                        </div>
-                        <div class="footer-links">
-                            <h4 class="footer-heading">Legal</h4>
-                            <ul>
-                                <li><a href="privacy.html">Privacy Policy</a></li>
-                                <li><a href="terms.html">Terms of Service</a></li>
+                                <li><a href="genai_mt_acknowledgement.html">AI Acknowledgement</a></li>
+                                <li><a href="implementation_rationale.html">Implementation Rationale</a></li>
                             </ul>
                         </div>
                     </nav>
