fix: footer and navigation

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -64,15 +64,15 @@
                 </div>
             </div>
 
-            <div class="feeds-card ">
-                <div class="profile-card ">
+            <a href="account.html" class="feeds-card">
+                <div class="profile-card">
                     <div class="profile-avatar">👨‍💻</div>
                     <div>
                         <p class="profile-name">Dwiputra Sam Mulia</p>
                         <p class="profile-username">@samdyra</p>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="crumbs-container">
