--- a/work_phase_4/genai_mt_acknowledgement.html
+++ b/work_phase_4/genai_mt_acknowledgement.html
@@ -327,6 +327,41 @@
             </section>
 
         </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-brand">
+                        <h3 class="footer-title">FeedCrumbs</h3>
+                        <p class="footer-tagline">Share Your Culinary Heritage</p>
+                    </div>
+                    <nav class="footer-nav" aria-label="Footer Navigation">
+                        <div class="footer-links">
+                            <h4 class="footer-heading">Explore</h4>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="feed_crumbs.html">FeedCrumbs</a></li>
+                                <li><a href="crumbings.html">Crumbings</a></li>
+                                <li><a href="crumbs_map.html">CrumbsMap</a></li>
+                                <li><a href="community.html">OZvent</a></li>
+                                <li><a href="account.html">Account & Accessibility</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-links">
+                            <h4 class="footer-heading">Assignment Specific</h4>
+                            <ul>
+                                <li><a href="genai_mt_acknowledgement.html">AI Acknowledgement</a></li>
+                                <li><a href="implementation_rationale.html">Implementation Rationale</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div class="footer-bottom">
+                    <p class="footer-copyright">&copy; 2025 FeedCrumbs. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </main>
 
 </body>
