--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -259,6 +259,7 @@
                             <li><a href="crumbings.html">Crumbings</a></li>
                             <li><a href="crumbs_map.html">CrumbsMap</a></li>
                             <li><a href="community.html">OZvent</a></li>
+                            <li><a href="account.html">Account & Accessibility</a></li>
                         </ul>
                     </div>
                     <div class="footer-links">
