fix: form accessiblity

--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -251,7 +251,9 @@
                 <form id="feed-form" class="crumb-form" novalidate>
                     <div class="form-group">
                         <label for="name" class="form-label">
-                            Full Name <span class="required" aria-label="required">*</span>
+                            Full Name
+                            <span class="required" aria-hidden="true">*</span>
+                            <span class="visually-hidden">(required)</span>
                         </label>
                         <input type="text" id="name" name="name" class="form-input" required aria-required="true"
                             aria-describedby="name-error">
@@ -260,7 +262,9 @@
 
                     <div class="form-group">
                         <label for="email" class="form-label">
-                            Email <span class="required" aria-label="required">*</span>
+                            Email
+                            <span class="required" aria-hidden="true">*</span>
+                            <span class="visually-hidden">(required)</span>
                         </label>
                         <input type="email" id="email" name="email" class="form-input" required aria-required="true"
                             aria-describedby="email-error">
@@ -269,7 +273,9 @@
 
                     <div class="form-group">
                         <label for="message" class="form-label">
-                            Message <span class="required" aria-label="required">*</span>
+                            Message
+                            <span class="required" aria-hidden="true">*</span>
+                            <span class="visually-hidden">(required)</span>
                         </label>
                         <textarea id="message" name="message" class="form-input form-textarea" rows="4" required
                             aria-required="true" aria-describedby="message-error"></textarea>
@@ -278,17 +284,17 @@
 
                     <div class="form-group">
                         <label for="photo" class="form-label">
-                            Photo <span class="required" aria-label="required">*</span>
+                            Photo
+                            <span class="required" aria-hidden="true">*</span>
+                            <span class="visually-hidden">(required)</span>
                         </label>
-                        <div class="file-input-wrapper">
-                            <input type="file" id="photo" name="photo" class="form-input-file" accept="image/*" required
-                                aria-required="true" aria-describedby="photo-error photo-help">
-                            <label for="photo" class="file-input-label">
-                                <span class="file-input-text">Choose a file</span>
-                                <span class="file-input-button">Browse</span>
-                            </label>
-                            <p id="photo-preview" class="file-name"></p>
+                        <input type="file" id="photo" name="photo" class="form-input-file" accept="image/*" required
+                            aria-required="true" aria-describedby="photo-error photo-help">
+                        <div class="file-input-styled" aria-hidden="true">
+                            <span class="file-input-text">Choose a file</span>
+                            <span class="file-input-button">Browse</span>
                         </div>
+                        <p id="photo-preview" class="file-name"></p>
                         <p id="photo-help" class="form-help">Max file size: 10MB. Supported formats: JPG, PNG, GIF</p>
                         <p id="photo-error" class="error-message" role="alert" aria-live="polite"></p>
                     </div>
