fix: accessibility in account page

--- a/work_phase_4/account.html
+++ b/work_phase_4/account.html
@@ -85,58 +85,59 @@
 
                         <div class="setting-item">
                             <div class="setting-info">
-                                <h3 class="setting-label">High Contrast Mode</h3>
+                                <h3 id="high-contrast-label" class="setting-label">High Contrast Mode</h3>
                                 <p class="setting-description">Increase contrast between text and background for better
                                     visibility</p>
                             </div>
                             <div class="setting-control">
-                                <label class="toggle-switch">
+                                <div class="toggle-switch">
                                     <input type="checkbox" id="high-contrast-toggle"
-                                        aria-label="Toggle high contrast mode">
+                                        aria-labelledby="high-contrast-label">
                                     <span class="toggle-slider"></span>
-                                </label>
+                                </div>
                             </div>
                         </div>
 
                         <div class="setting-item">
                             <div class="setting-info">
-                                <h3 class="setting-label">Reduce Motion</h3>
+                                <h3 id="reduce-motion-label" class="setting-label">Reduce Motion</h3>
                                 <p class="setting-description">Minimize animations and transitions for a calmer
                                     experience</p>
                             </div>
                             <div class="setting-control">
-                                <label class="toggle-switch">
-                                    <input type="checkbox" id="reduce-motion-toggle" aria-label="Toggle reduced motion">
+                                <div class="toggle-switch">
+                                    <input type="checkbox" id="reduce-motion-toggle"
+                                        aria-labelledby="reduce-motion-label">
                                     <span class="toggle-slider"></span>
-                                </label>
+                                </div>
                             </div>
                         </div>
 
                         <div class="setting-item">
                             <div class="setting-info">
-                                <h3 class="setting-label">Underline Links</h3>
+                                <h3 id="underline-links-label" class="setting-label">Underline Links</h3>
                                 <p class="setting-description">Add underlines to all links for easier identification</p>
                             </div>
                             <div class="setting-control">
-                                <label class="toggle-switch">
+                                <div class="toggle-switch">
                                     <input type="checkbox" id="underline-links-toggle"
-                                        aria-label="Toggle link underlines">
+                                        aria-labelledby="underline-links-label">
                                     <span class="toggle-slider"></span>
-                                </label>
+                                </div>
                             </div>
                         </div>
 
                         <div class="setting-item">
                             <div class="setting-info">
-                                <h3 class="setting-label">Focus Indicators</h3>
+                                <h3 id="focus-indicators-label" class="setting-label">Focus Indicators</h3>
                                 <p class="setting-description">Enhanced focus outlines for keyboard navigation</p>
                             </div>
                             <div class="setting-control">
-                                <label class="toggle-switch">
+                                <div class="toggle-switch">
                                     <input type="checkbox" id="focus-indicators-toggle"
-                                        aria-label="Toggle enhanced focus indicators" checked>
+                                        aria-labelledby="focus-indicators-label" checked>
                                     <span class="toggle-slider"></span>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </div>
