fix: crumbs map accessibility

--- a/work_phase_4/crumbs_map.html
+++ b/work_phase_4/crumbs_map.html
@@ -57,46 +57,48 @@
         <div class="sidebar">
             <div class="map-controls">
                 <div class="control-section">
-                    <h5 class="control-section-title">Basemap</h5>
-                    <div class="basemap-options">
-                        <div class="basemap-option">
-                            <input type="radio" id="basemap-standard" name="basemap" checked>
-                            <label for="basemap-standard">Standard</label>
+                    <fieldset>
+                        <legend class="control-section-title">Basemap</legend>
+                        <div class="basemap-options">
+                            <div class="basemap-option">
+                                <input type="radio" id="basemap-standard" name="basemap" checked>
+                                <label for="basemap-standard">Standard</label>
+                            </div>
+                            <div class="basemap-option">
+                                <input type="radio" id="basemap-satellite" name="basemap">
+                                <label for="basemap-satellite">Satellite</label>
+                            </div>
+                            <div class="basemap-option">
+                                <input type="radio" id="basemap-terrain" name="basemap">
+                                <label for="basemap-terrain">Terrain</label>
+                            </div>
                         </div>
-                        <div class="basemap-option">
-                            <input type="radio" id="basemap-satellite" name="basemap">
-                            <label for="basemap-satellite">Satellite</label>
-                        </div>
-                        <div class="basemap-option">
-                            <input type="radio" id="basemap-terrain" name="basemap">
-                            <label for="basemap-terrain">Terrain</label>
-                        </div>
-                    </div>
+                    </fieldset>
                 </div>
 
                 <div class="control-section">
                     <h5 class="control-section-title">Layers</h5>
                     <div class="layer-toggles">
                         <div class="layer-toggle">
-                            <label for="layer-regions">Indigenous Regions</label>
                             <div class="toggle-switch">
                                 <input type="checkbox" id="layer-regions" checked>
                                 <span class="toggle-slider"></span>
                             </div>
+                            <label for="layer-regions">Indigenous Regions</label>
                         </div>
                         <div class="layer-toggle">
-                            <label for="layer-recipes">Cultural Landmarks</label>
                             <div class="toggle-switch">
                                 <input type="checkbox" id="layer-recipes">
                                 <span class="toggle-slider"></span>
                             </div>
+                            <label for="layer-recipes">Cultural Landmarks</label>
                         </div>
                         <div class="layer-toggle">
-                            <label for="layer-events">Administrative Boundary</label>
                             <div class="toggle-switch">
                                 <input type="checkbox" id="layer-events">
                                 <span class="toggle-slider"></span>
                             </div>
+                            <label for="layer-events">Administrative Boundary</label>
                         </div>
                     </div>
                 </div>
@@ -122,7 +124,6 @@
                         <button class="button button-tertiary">Nearest Cultural Cuisine</button>
                         <button class="button button-tertiary">Nearest OZVents</button>
                         <button class="button button-tertiary">Nearest Popular Runes</button>
-
                     </div>
                 </div>
 
