feat: add logos on tabbar

--- a/work_phase_4/crumbings.html
+++ b/work_phase_4/crumbings.html
@@ -16,11 +16,21 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
-            <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
-            <li><a href="crumbings.html" aria-current="page"><span>👥</span></a></li>
-            <li><a href="community.html"><span>👥</span></a></li>
+            <li><a href="index.html">
+                    <img src="assets/images/home_logo.png" alt="Home Icon" />
+                </a></li>
+            <li><a href="feed_crumbs.html">
+                    <img src="assets/images/feeds_logo.png" alt="FeedCrumbs Icon" />
+                </a></li>
+            <li><a href="crumbs_map.html">
+                    <img src="assets/images/map_logo.png" alt="CrumbsMap Icon" />
+                </a></li>
+            <li><a href="crumbings.html" aria-current="page">
+                    <img src="assets/images/crumbs_logo.png" alt="Crumbings Icon" />
+                </a></li>
+            <li><a href="community.html">
+                    <img src="assets/images/community.png" alt="OZvent Icon" />
+                </a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
