--- a/work_phase_4/index.html
+++ b/work_phase_4/index.html
@@ -16,11 +16,21 @@
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html" aria-current="page"><span class="icon">🏚️</span></a></li>
-            <li><a href="feed_crumbs.html"><span class="icon">🗺️</span></a></li>
-            <li><a href="crumbs_map.html"><span>🗺️</span></a></li>
-            <li><a href="crumbings.html"><span>👥</span></a></li>
-            <li><a href="community.html"><span>👥</span></a></li>
+            <li><a href="index.html" aria-current="page">
+                    <img src="assets/images/home_logo.png" alt="Home Icon" />
+                </a></li>
+            <li><a href="feed_crumbs.html">
+                    <img src="assets/images/feeds_logo.png" alt="FeedCrumbs Icon" />
+                </a></li>
+            <li><a href="crumbs_map.html">
+                    <img src="assets/images/map_logo.png" alt="CrumbsMap Icon" />
+                </a></li>
+            <li><a href="crumbings.html">
+                    <img src="assets/images/crumbs_logo.png" alt="Crumbings Icon" />
+                </a></li>
+            <li><a href="community.html">
+                    <img src="assets/images/community.png" alt="OZvent Icon" />
+                </a></li>
         </ul>
     </nav>
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
@@ -40,8 +50,7 @@
                 <h1 id="hero-title" class="hero-title">Share Your Culinary Heritage</h1>
                 <p class="hero-subtitle">
                     Connect with a vibrant community that celebrates traditional recipes
-                    and cultural food stories from every corner of Australia.
-                    Your heritage deserves to be shared.
+                    and cultural food stories from every corner of the world.
                 </p>
                 <div class="hero-actions">
                     <a href="#highlight" class="button button-primary">Explore</a>
@@ -131,11 +140,21 @@
                     </div>
                     <div class="about-text">
                         <h3 class="about-item-title">Who is CCI?</h3>
-                        <p class="about-item-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Perspiciatis quidem mollitia maiores ipsum voluptates vel ullam consequatur dolores!
-                            Numquam rerum ea sequi sed, nemo et amet sit laborum voluptates velit officia mollitia
-                            tempore incidunt vitae veritatis, quas nam eveniet iusto temporibus accusantium ex
-                            labore cum. Voluptates esse doloremque animi itaque.</p>
+                        <p class="about-item-description">
+                            We are a non-profit organisation dedicated to fostering
+                            social cohesion by empowering
+                            diverse communities to share
+                            their stories,connect
+                            with others, and access
+                            resources
+                            that enhance their visibility and
+                            influence. Our mission is
+                            to strengthen societal
+                            bonds by
+                            creating platforms that
+                            celebrate and support the unique identities of communities
+                            across Australia.
+                        </p>
                         <a href="about.html">
                             <button class="button button-primary btn-learn-more">Learn More</button>
                         </a>
@@ -148,12 +167,17 @@
                             alt="Diverse community members connecting through shared appreciation of cultural cuisine">
                     </div>
                     <div class="about-text">
-                        <h3 class="about-item-title">What are our values and missions?</h3>
-                        <p class="about-item-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Quisquam pariatur neque sapiente error inventore perferendis ratione sed maxime vel
-                            atque commodi ullam ipsum, minus dignissimos nostrum eos iure, beatae nobis aliquid
-                            voluptatem. Asperiores consequatur cumque consequuntur. Recusandae, voluptas ipsa.
-                            Commodi vitae corporis velit iure sunt quaerat similique alias adipisci officia.</p>
+                        <h3 class="about-item-title">What are our values?</h3>
+                        <p class="about-item-description">
+                        <p class="about-item-description">We prioritize inclusivity, accessibility, cultural
+                            sensitivity, and community empowerment. Our designs make it easy for people to share
+                            authentic food stories, celebrate identity, and learn from one another. We foster
+                            respectful, meaningful connections through ethical, user‑centred features that encourage
+                            participation, collaboration, and recognition of diverse traditions. By championing
+                            fairness, empathetic design, and shared learning, FeedCrumbs strengthens social bonds,
+                            preserves culinary heritage, and creates welcoming spaces where every voice can contribute.
+                        </p>
+                        </p>
                         <a href="about.html#implementation-title">
                             <button class="button button-primary btn-learn-more">Learn More</button>
                         </a>
