--- a/work_phase_4/feed_crumbs.html
+++ b/work_phase_4/feed_crumbs.html
@@ -291,24 +291,26 @@
                             aria-required="true" aria-describedby="message-error"></textarea>
                         <p id="message-error" class="error-message" role="alert" aria-live="polite"></p>
                     </div>
-
                     <div class="form-group">
                         <label for="photo" class="form-label">
                             Photo
                             <span class="required" aria-hidden="true">*</span>
                             <span class="visually-hidden">(required)</span>
                         </label>
-                        <input type="file" id="photo" name="photo" class="form-input-file" accept="image/*" required
-                            aria-required="true" aria-describedby="photo-error photo-help">
-                        <div class="file-input-styled" aria-hidden="true">
-                            <span class="file-input-text">Choose a file</span>
-                            <span class="file-input-button">Browse</span>
+                        <div class="file-input-wrapper">
+                            <input type="file" id="photo" name="photo" class="form-input-file" accept="image/*" required
+                                aria-required="true" aria-describedby="photo-error photo-help">
+                            <div class="file-input-label" role="button" tabindex="0"
+                                onclick="document.getElementById('photo').click()"
+                                onkeydown="if(event.key === 'Enter' || event.key === ' ') { event.preventDefault(); document.getElementById('photo').click(); }">
+                                <span class="file-input-text">Choose a file</span>
+                                <span class="file-input-button">Browse</span>
+                            </div>
+                            <p id="photo-preview" class="file-name"></p>
                         </div>
-                        <p id="photo-preview" class="file-name"></p>
                         <p id="photo-help" class="form-help">Max file size: 10MB. Supported formats: JPG, PNG, GIF</p>
                         <p id="photo-error" class="error-message" role="alert" aria-live="polite"></p>
                     </div>
-
                     <div id="form-feedback" class="form-feedback" role="status" aria-live="polite"></div>
 
                     <div class="form-actions">
