feat: improve about page

--- a/work_phase_4/about.html
+++ b/work_phase_4/about.html
@@ -87,19 +87,16 @@
                         expression</p>
                     <div class="vision-pillars">
                         <div class="pillar">
-                            <span class="pillar-icon" aria-hidden="true">🤝</span>
                             <h4 class="pillar-title">Inclusive</h4>
                             <p>A safe space where people from different backgrounds feel respected
                                 and welcomed to share their authentic selves.</p>
                         </div>
                         <div class="pillar">
-                            <span class="pillar-icon" aria-hidden="true">✨</span>
                             <h4 class="pillar-title">Self-Expression</h4>
                             <p>Empowering individuals to proudly share their cultural identity
                                 through their traditional cuisines and food stories.</p>
                         </div>
                         <div class="pillar">
-                            <span class="pillar-icon" aria-hidden="true">💝</span>
                             <h4 class="pillar-title">Meaningful Connections</h4>
                             <p>Building genuine relationships and understanding between communities
                                 through shared appreciation of cultural food heritage.</p>
@@ -154,38 +151,47 @@
 
                 <div class="features-grid">
                     <article class="feature-card">
-                        <div class="feature-icon" aria-hidden="true">🏠</div>
-                        <h4 class="feature-name">Home Page</h4>
-                        <p class="feature-description">Your welcoming entry point to the platform, showcasing our
-                            mission and guiding you to explore the community.</p>
+                        <a href="index.html">
+                            <h4 class="feature-name">Home Page</h4>
+                            <p class="feature-description">Your welcoming entry point to the platform, showcasing our
+                                mission and guiding you to explore the community.</p>
+
+                        </a>
                     </article>
 
                     <article class="feature-card">
-                        <div class="feature-icon" aria-hidden="true">📱</div>
-                        <h4 class="feature-name">FeedCrumbs Timeline</h4>
-                        <p class="feature-description">Share stories, recipes, and experiences through Runes, Crumbings,
-                            and OZvents while connecting with others.</p>
+                        <a href="feed_crumbs.html">
+                            <h4 class="feature-name">FeedCrumbs Timeline</h4>
+                            <p class="feature-description">Share stories, recipes, and experiences through Runes,
+                                Crumbings,
+                                and OZvents while connecting with others.</p>
+                        </a>
                     </article>
 
                     <article class="feature-card">
-                        <div class="feature-icon" aria-hidden="true">🏆</div>
-                        <h4 class="feature-name">Crumbings Competitions</h4>
-                        <p class="feature-description">Participate in friendly cooking challenges and celebrate
-                            traditional recipes through gamified engagement.</p>
+                        <a href="crumbings.html">
+                            <h4 class="feature-name">Crumbings Competitions</h4>
+                            <p class="feature-description">Participate in friendly cooking challenges and celebrate
+                                traditional recipes through gamified engagement.</p>
+                        </a>
                     </article>
 
                     <article class="feature-card">
-                        <div class="feature-icon" aria-hidden="true">🗺️</div>
-                        <h4 class="feature-name">CrumbsMap</h4>
-                        <p class="feature-description">Discover cultural food experiences and historical sites through
-                            an interactive map with educational overlays.</p>
+                        <a href="crumbs_map.html">
+                            <h4 class="feature-name">CrumbsMap</h4>
+                            <p class="feature-description">Discover cultural food experiences and historical sites
+                                through
+                                an interactive map with educational overlays.</p>
+                        </a>
                     </article>
 
                     <article class="feature-card">
-                        <div class="feature-icon" aria-hidden="true">👥</div>
-                        <h4 class="feature-name">Communities & OZvents</h4>
-                        <p class="feature-description">Join cultural communities, participate in events, and contribute
-                            to collaborative wikis that celebrate heritage.</p>
+                        <a href="community.html">
+                            <h4 class="feature-name">Communities & OZvents</h4>
+                            <p class="feature-description">Join cultural communities, participate in events, and
+                                contribute
+                                to collaborative wikis that celebrate heritage.</p>
+                        </a>
                     </article>
                 </div>
 
